[package]
name = "rtea"
version = "0.3.5"
description = "Bring fast TEA cipher to Python. Powered by Rust."
authors = ["zkonge <zkonge@outlook.com>"]
edition = "2021"
readme = "README.md"
homepage = "https://github.com/zkonge/rtea"
repository = "https://github.com/zkonge/rtea"
license-file = "LICENSE"

[lib]
name = "rtea"
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.8"

[dependencies.pyo3]
version = "0.18"
features = ["abi3-py37"]

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = "fat"
opt-level = 3
