[project]
name = "rtea"
repository = "https://github.com/zkonge/rtea"

[build-system]
build-backend = "maturin"
requires = ["maturin>=0.12,<0.13"]

[tool.maturin]
manylinux = "off"
sdist-include = ["Cargo.lock"]
strip = true

[tool.black]
line-length = 120
target-version = ["py37", "py38", "py39"]
include = '\.pyi?$'
