[project]
name = "rtea"
requires-python = ">=3.7"
license = { text = "MIT License" }
urls = { repository = "https://github.com/zkonge/rtea" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Typing :: Typed",
]
dynamic = ["version"]

[build-system]
build-backend = "maturin"
requires = ["maturin>=0.14,<2.0"]

[tool.maturin]
sdist-include = ["Cargo.lock"]
strip = true

[tool.black]
line-length = 120
target-version = ["py37", "py38", "py39", "py310", "py311", "py312", "py313"]
include = '\.pyi?$'
